--- a/src/main/resources/templates/mazegame.html
+++ b/src/main/resources/templates/mazegame.html
@@ -14,13 +14,14 @@
     <script
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="/postplayer.js"></script>
-    <script src="/getplayer.js"></script>
+
+
 </head>
 <body>
 <div id="postResultDiv" align="center"></div>
 <div class="container">
     <h2>Stacked form</h2>
-    <form id="playerForm">
+    <form id="playerForm" >
         <div class="form-group">
             <label for="playerIDS">Player ID:</label> <input type="text" class="form-control" id="playerIDS" placeholder="Enter Player ID"
                                                                   name="playerIDS">
@@ -29,28 +30,16 @@
             <label for="playerNameF">Player NameF:</label> <input type="text" class="form-control" id="playerNameF" placeholder="Enter Player Name"
                                                                   name="playerNameF">
         </div>
-        <div class="form-group">
-            <label for="playerNameS">Player NameS:</label> <input type="text" class="form-control" id="playerNameS" placeholder="Enter PlayerS Name"
-                                                                name="playerNameS">
-        </div>
 
-        <div class="form-group form-check">
-            <label class="form-check-label"> <input
-                    class="form-check-input" type="checkbox" name="remember">
-                Remember me
-            </label>
-        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+
     </form>
     <br />
-    <div class="col-sm-7" style="margin: 20px 0px 20px 0px">
-        <button id="getAllPlayers" type="button" class="btn btn-primary">Get
-            All Books</button>
-        <div id="getResultDiv" style="padding: 20px 10px 20px 50px">
-            <ul class="list-group">
-            </ul>
-        </div>
-    </div>
+
+    <form method="post" >
+        <button type="submit" class="btn btn-primary">Start Playing</button>
+    </form>
+
 </div>
 
 
