Final maze code

--- a/src/main/resources/templates/startplaying.html
+++ b/src/main/resources/templates/startplaying.html
@@ -35,68 +35,67 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <br/>
+    <script>
+        function resetTimer(){
+            clearInterval(t);
+            document.getElementById("end").style.display = "none";
+            document.getElementById("remove").style.display = "block";
+            alert("Game Over");
+        }
+        function startTimer(m,s)
+        {
+            document.getElementById('timer').innerHTML= m+":"+s;
+            document.getElementById("remove").style.display = "none";
+            document.getElementById("end").style.display = "block";
+
+            /* if (s==0  && m==0){
+                 var xhr = new XMLHttpRequest();
+                 var url = "";
+                 xhr.open("GET", url, true);
+                 xhr.setRequestHeader("Content-Type", "application/json");
+                 xhr.onreadystatechange = function () {
+                     if (xhr.readyState === 4 && xhr.status === 200) {
+                         var json = JSON.parse(xhr.responseText);
+                         console.log(json.email + ", " + json.password);
+                     }
+                 };
+                 xhr.send();
+             }*/
+
+            if (s==0)
+            {
+                if (m == 0)
+                {
+                    return;
+                }
+                else if (m != 0)
+                {
+                    m = m-1;
+                    s = 60;
+                }
+            }
+            s = s-1;
+            t=setTimeout(function(){startTimer(m,s)},1000);
+        }
+    </script>
     <div class="col-sm-7" style="margin: 20px 0px 20px 0px">
+        <button id="remove" onClick = "startTimer(120,0)" class="btn btn-primary">Start</button>
+        <button id="end" style="display: none;" onClick = "resetTimer()" class="btn btn-primary">End</button>
+
+        <p id = "timer">120:0</p>
+
         <button id="getAllPlayers" type="button" class="btn btn-primary">Get
             All players</button>
         <div id="getResultDiv" style="padding: 20px 10px 20px 50px">
             <ul class="list-group">
             </ul>
         </div>
+
     </div>
 </div>
 
 
-<script>
-    function resetTimer(){
-        clearInterval(t);
-        document.getElementById("end").style.display = "none";
-        document.getElementById("remove").style.display = "block";
-        alert("Game Over");
-    }
-    function startTimer(m,s)
-    {
-        document.getElementById('timer').innerHTML= m+":"+s;
-        document.getElementById("remove").style.display = "none";
-        document.getElementById("end").style.display = "block";
 
-       /* if (s==0  && m==0){
-            var xhr = new XMLHttpRequest();
-            var url = "";
-            xhr.open("GET", url, true);
-            xhr.setRequestHeader("Content-Type", "application/json");
-            xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                    var json = JSON.parse(xhr.responseText);
-                    console.log(json.email + ", " + json.password);
-                }
-            };
-            xhr.send();
-        }*/
-        
-        if (s==0)
-        {
-            if (m == 0)
-            {
-                return;
-            }
-            else if (m != 0)
-            {
-                m = m-1;
-                s = 60;
-            }
-        }
-        s = s-1;
-        t=setTimeout(function(){startTimer(m,s)},1000);
-    }
-</script>
-
-
-
-
-<button id="remove" onClick = "startTimer(120,0)">Start</button>
-<button id="end" style="display: none;" onClick = "resetTimer()">End</button>
-
-<p id = "timer">120:0</p>
 
 
 
