--- a/src/main/resources/templates/mazegame.html
+++ b/src/main/resources/templates/mazegame.html
@@ -19,14 +19,14 @@
 <body>
 <div id="postResultDiv" align="center"></div>
 <div class="container">
-    <h2>Stacked form</h2>
+    <h2>Maze Game</h2>
     <form id="playerForm" >
         <div class="form-group">
             <label for="playerIDS">Player ID:</label> <input type="text" class="form-control" id="playerIDS" placeholder="Enter Player ID"
                                                                   name="playerIDS">
         </div>
         <div class="form-group">
-            <label for="playerNameF">Player NameF:</label> <input type="text" class="form-control" id="playerNameF" placeholder="Enter Player Name"
+            <label for="playerNameF">Player Name:</label> <input type="text" class="form-control" id="playerNameF" placeholder="Enter Player Name"
                                                                   name="playerNameF">
         </div>
 
