Final maze code frontend

--- a/src/main/resources/templates/startplaying.html
+++ b/src/main/resources/templates/startplaying.html
@@ -20,7 +20,7 @@
 <body>
 <div id="postResultDiv" align="center"></div>
 <div class="container">
-    <h2>Stacked form</h2>
+    <h2>Maze Game</h2>
     <form id="playerForm">
         <div class="form-group">
             <label for="mazePlayer">Player ID:</label> <input type="text" class="form-control" id="mazePlayer" placeholder="Enter Player ID"
